# learn_github_action-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  setup.py
.github/workflows/: 01_02_minimal_workflow.yml  01_03_orchestrate_jobs.yml  01_04_environment_variables.yml  01_05_context_information.yml  01_06_conditional_job_and_step.yml  01_07_matrix_build.yml  01_07_matrix_build_1.yml  01_08_sensitive_data.yml  01_09_01_reusable_workflow_caller.yml  01_09_01_reusable_workflow_worker.yml  01_09_02_reusable_workflow_caller.yml  01_09_02_reusable_workflow_worker.yml  01_09_04_reusable_workflow_caller.yml  01_09_04_reusable_workflow_caller1.yml  01_09_04_reusable_workflow_caller2.yml  01_09_04_reusable_workflow_project1.yml  01_09_04_reusable_workflow_project2.yml  01_09_reusable_workflow_caller.yml  01_09_reusable_workflow_worker.yml  01_10_manual_approve.yml  cache_python_package_dependencies.yml  ghact_github_tag.yml  github_action_ui_demo.yml  project1.yml  quickstart.yml  reusable_workflow_caller.yml  s001_minimal_workflow.yml  s005_workflow_dispatch_inputs.yml  (+7 more)
docs/: Makefile  make.bat
examples/: use_github_action_with_aws_cdk.rst
examples/s101_cache_python_package_dependencies/: README.rst  build.py  pyproject.toml  requirements_auto.txt
examples/s101_cache_python_package_dependencies/bootstrap/: pyproject.toml
genai/: generate_knowledge_base.py  meta.json
tests/: all.py  test_api.py
(+41 files in other folders)
